fix column shift in DataGrid

--- a/Shared/DataGrid/DataGrid.razor.css
+++ b/Shared/DataGrid/DataGrid.razor.css
@@ -7,18 +7,24 @@
     @apply bg-gray-50;
 }
 
-::deep .quickgrid[theme=default] th:not(:last-child) {
-    @apply text-left text-sm font-semibold text-gray-900;
-}
+
 ::deep .quickgrid[theme=default] th:first-child {
     @apply py-3.5 pl-4 pr-3 sm:pl-6;
 }
-::deep .quickgrid[theme=default] th:last-child {
-    @apply relative py-3.5 pl-3 pr-4 sm:pr-6;
-}
+
 ::deep .quickgrid[theme=default] th:not(:first-child):not(:last-child) {
     @apply px-3 py-3.5;
 }
+::deep .quickgrid[theme=default] th:not(:last-child) {
+    @apply text-left text-sm font-semibold text-gray-900;
+}
+::deep .quickgrid[theme=default] th:nth-last-child(2) {
+    @apply w-1/3;
+}
+::deep .quickgrid[theme=default] th:last-child {
+    @apply relative py-3.5 pl-3 pr-4 sm:pr-6; 
+}
+
 
 ::deep .quickgrid[theme=default] button.col-title {
     @apply pl-0 hover:bg-inherit;
